Refactor base route to controller + Update Readme

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "NODE_ENV=production node server",
+    "dev": " NODE_ENV=development nodemon server"
   },
   "repository": {
     "type": "git",
@@ -24,5 +24,8 @@
     "helmet": "^4.1.1",
     "mongoose": "^5.10.9",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.2"
   }
 }
