Added Live reload of container using docker volumes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - backend
     ports:
       - "5000:5000"
+    volumes:
+      - ./:/usr/src/app
 
   web-cli:
     image: express_api
