--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "NODE_ENV=production node server",
-    "dev": " NODE_ENV=development nodemon server"
+    "dev": " NODE_ENV=development nodemon server",
+    "test": "mocha --timeout 10000"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,9 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "nodemon": "^1.19.2"
+    "nodemon": "^1.19.2",
+    "chai": "^3.5.0",
+    "chai-http": "^2.0.1",
+    "mocha": "^2.4.5"
   }
 }
